refactor: change FormTypes to List