@@ -49,7 +49,7 @@ public class InstagramFrameConfigurationGenerator extends FrameConfigurationGene
 
         frameConfigurations = applyParameter(frameConfigurations, colorsBackground, (c, v) -> c.setColorBackground((int) v));
         frameConfigurations = applyParameter(frameConfigurations, List.of(0.6f), (c, v) -> c.setBlurValue((float) v));
-        frameConfigurations = applyParameter(frameConfigurations, Collections.singletonList(Set.of(FormType.TRIANGLE)), (c, v) -> c.setFormTypes((List<Set<FormType>>) v));
+        frameConfigurations = applyParameter(frameConfigurations, List.of(FormType.CIRCLE), (c, v) -> c.setFormTypes((List<FormType>) v));
 
         // Change direction (triangles and semicircles only)
         //FrameConfiguration.IntFunction directionFunction = (frameIndex) -> Utils.getRandomInt(4);
